# ToolNeuron

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  NOTICE.md  README.md  TASK.MD  build.gradle.kts  build_and_log.bat  check_context_size.sh  check_url.pn  crash_investigation.pn  gradle.properties  settings.gradle.kts  settings_remote_api.pn  settings_remote_api_images.pn
.github/: copilot-instructions.md
.github/workflows/: build-debug-apk.yml  build-test-apk.yml
ai-core/: proguard-rules.pro
ai-core/src/main/cpp/: CMakeLists.txt  ai_core.cpp
ai-core/src/main/java/com/mp/ai_core/: NativeLib.kt
ai-engine/: build.gradle.kts
ai-engine/src/main/aidl/com/mp/ai_engine/: IModelOperatorService.aidl
ai-engine/src/test/java/com/mp/ai_engine/: ExampleUnitTest.kt
ai-manager/: build.gradle.kts
ai-module/: build.gradle.kts
ai-module/libs/: ai-core-release.aar
ai-module/src/androidTest/java/com/dark/ai_module/: ExampleInstrumentedTest.kt
ai-module/src/test/java/com/dark/ai_module/: ExampleUnitTest.kt
ai_gguf/: build.gradle.kts
ai_gguf/src/androidTest/java/com/mp/ai_gguf/: ExampleInstrumentedTest.kt
ai_gguf/src/main/cpp/: CMakeLists.txt
ai_gguf/src/main/cpp/src/: ai_gguf.cpp
ai_gguf/src/main/cpp/src/chat/: chat_template.cpp  chat_template.h
ai_gguf/src/main/cpp/src/cpu/: cpu_helper.cpp  cpu_helper.h
ai_gguf/src/main/cpp/src/state/: global_state.cpp  global_state.h  model_state.cpp  model_state.h
ai_gguf/src/main/cpp/src/tool_calling/: tool_call_state.cpp  tool_call_state.h
ai_gguf/src/main/cpp/src/utils/: jni_utils.cpp  jni_utils.h  logger.h  utf8_utils.cpp  utf8_utils.h
ai_gguf/src/main/java/com/mp/ai_gguf/: GGUFNativeLib.kt
ai_gguf/src/test/java/com/mp/ai_gguf/: ExampleUnitTest.kt
app/: build.gradle.kts  proguard-rules.pro
app/libs/: ai-core-release.aar
app/src/androidTest/java/com/dark/tool_neuron/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: STYLE.md  mcp-registry.json  server_docs.html  server_webui.css  server_webui.html
app/src/main/assets/themes/: default.json  industrial-label.json
app/src/main/assets/webui/: app.js  index.html  style.css
app/src/main/cpp/: CMakeLists.txt  gguf_jni.cpp
app/src/main/java/com/dark/neuroverse/: NVApplication.kt  NeuroVerseApplication.kt
app/src/main/java/com/dark/tool_neuron/: MainActivity.kt  NVApplication.kt  TNApplication.kt
app/src/main/java/com/mp/ai_gguf/: GGUFNativeLib.kt
app/src/main/res/drawable/: activity.xml  apps.xml  brain.xml  mic.xml  movies.xml  newspaper.xml  plugin.xml  shield.xml  typing.xml  web_search.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/dark/tool_neuron/: ExampleUnitTest.kt
data-hub-lib/: build.gradle.kts
docs/: MemoryVault.MD  OPENWEBUI_SETUP.md  REMOTE_API.md
docs/implementation_docs/: MemoryVault_Plan.MD
docs/plans/: 2026-02-28-monetization-design.md  2026-02-28-monetization-implementation-plan.md  AdvanceRagSystem.MD  re-deign.md
download_manager/: build.gradle.kts
download_manager/src/main/cpp/: download_manager.cpp  persistence.cpp
download_manager/src/main/java/com/dark/download_manager/: Format.kt  HxdManager.kt  HxdNotification.kt  HxdService.kt  NativeLib.kt
gradle/: libs.versions.toml
hxs/: build.gradle.kts
hxs/src/androidTest/java/com/dark/hxs/: HexStorageTest.kt  HxsRecordTest.kt
hxs/src/main/cpp/: hxs.cpp
hxs/src/main/java/com/dark/hxs/: HexStorage.kt
hxs_encryptor/: build.gradle.kts
hxs_encryptor/src/androidTest/java/com/dark/hxs_encryptor/: HxsEncryptorTest.kt
hxs_encryptor/src/main/cpp/: argon2.cpp  crypto_engine.cpp  hxs_encryptor.cpp
hxs_encryptor/src/main/java/com/dark/hxs_encryptor/: HxsEncryptor.kt
libs/: ai_gguf-release.aar
memory-vault/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
memory-vault/src/main/java/com/memoryvault/: BackupManager.kt  MemoryVault.kt  ValidationReport.kt  VaultValidator.kt
memory-vault/src/main/java/com/memoryvault/core/: BlockHeader.kt  BlockMetadata.kt  BlockReader.kt  BlockType.kt  BlockWriter.kt  ContentProcessor.kt  DedupManager.kt  DefragManager.kt  EncryptionManager.kt  FreeSpaceManager.kt  FullTextIndex.kt  IndexSerializer.kt  MigrationManager.kt  TextTokenizer.kt  VaultFile.kt  VaultHeader.kt  VaultIndex.kt  VectorIndex.kt  VectorUtils.kt
n_apps/: PLAN.md
native-server/: build.gradle.kts  consumer-rules.pro
native-server/src/main/cpp/: CMakeLists.txt  gen_session.cpp  gen_session.h  jvm_bridge.cpp  jvm_bridge.h  native_server.cpp  openai_schema.cpp  openai_schema.h  reply_session.cpp  reply_session.h  server_audit.cpp  server_audit.h  server_auth.cpp  server_auth.h  server_core.cpp  server_core.h  server_crypto.cpp  server_crypto.h  server_docs.cpp  server_docs.h  server_models.cpp  server_models.h  server_rate_limit.cpp  server_rate_limit.h  server_staging.cpp  server_staging.h  server_webui.cpp  server_webui.h  wav_codec.cpp  wav_codec.h
networking/: build.gradle.kts
networking/src/main/cpp/: CMakeLists.txt  ddg_client.cpp  ddg_client.h  html_extract.cpp  html_extract.h  http_backend.h  http_curl.cpp  http_stub.cpp  net_jni.cpp  url_util.cpp  url_util.h
neuron-packet/: proguard-rules.pro
plugin-api/: build.gradle.kts  consumer-rules.pro
plugins/: build.gradle.kts  proguard-rules.pro
rag-doc-lib/: build.gradle.kts
rag-doc-lib/src/main/cpp/: CMakeLists.txt  rag_doc_lib.cpp
repo/: AppUpdate.json
smollm/: build.gradle.kts  proguard-rules.pro
smollm/src/main/cpp/: CMakeLists.txt  GGUFReader.cpp  LLMInference.cpp  LLMInference.h  smollm.cpp
system_encryptor/: build.gradle.kts
task-manager/: build.gradle.kts
termux/terminal-emulator/: build.gradle.kts
termux/terminal-view/: build.gradle.kts
termux/termux-shared/: build.gradle.kts
tools/: sign_license.py
ums/: build.gradle.kts  consumer-rules.pro
ums/src/main/cpp/: collection.cpp  collection.h  manifest.cpp  manifest.h  ums.cpp
web/: index.html
(+747 files in other folders)
